# ComfyUI-HunyuanCustom-GGUF

./: LICENSE  MANIFEST.in  README.md  README_AUDIO.md  __init__.py  pyproject.toml  quickstart.md  requirements.txt  setup.py
comfyui_hunyuancustom_gguf/: __init__.py  __main__.py  audio_utils.py  cli.py  nodes.py
comfyui_hunyuancustom_gguf/utils/: ops.py
examples/: audio_workflow_example.json  batch_process.py  process_batch.sh
tests/: conftest.py  test_audio_utils.py
workflows/audio/: audio_workflow_example.json
