Homepage = "https://github.com/yourusername/ComfyUI-HunyuanCustom-GGUF"
Repository = "https://github.com/yourusername/ComfyUI-HunyuanCustom-GGUF.git"

[project.scripts]
comfyui-hunyuancustom-gguf = "comfyui_hunyuancustom_gguf.cli:main"

[tool.setuptools]
packages = ["comfyui_hunyuancustom_gguf"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.comfy]
PublisherId = "yourusername"
DisplayName = "ComfyUI-HunyuanCustom-GGUF"
Icon = ""

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"