[project]
name = "comfyui_hunyuancustom_gguf"
version = "0.1.0"
authors = [
  { name="Max Schäffer", email="esca@esca-mb-6.local" },
]
description = "A custom node for ComfyUI that uses GGUF models"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "torch",
    "transformers",
    "safetensors",
    "tqdm",
    "requests",
    "huggingface_hub",
    "einops",
    "accelerate",
    "bitsandbytes",
    "scipy",
    "soundfile",
    "librosa",
    "matplotlib",
    "pydub",
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
    "ruff",
    "pre-commit",
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "sphinx-tabs",
    "sphinx-panels",
    "sphinx-rtd-dark-mode",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "sphinx-tabs",
    "sphinx-panels",
    "sphinx-rtd-dark-mode",
]

[project.urls]
"Homepage" = "https://github.com/escadesign/ComfyUI-HunyuanCustom-GGUF"
"Bug Tracker" = "https://github.com/escadesign/ComfyUI-HunyuanCustom-GGUF/issues"

[tool.setuptools]
packages = ["comfyui_hunyuancustom_gguf"]
package-dir = {"" = "."}

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = ["E501"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
